--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
+@import url(//fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,300italic,600,400,300);
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: 'Open Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
