--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -10,7 +10,7 @@
 }
 
 .Main-prediction {
-  font-size: 22px;
+  font-size: 18px;
   margin: 20px;
 }
 
@@ -61,10 +61,11 @@ table.Main-table tr:nth-child(odd) {
 .Main-divider {
   width: 100%;
   border: 1px solid #eee;
+  margin: 50px 0;
 }
 
 @media only screen and (min-width: 768px) {
   .Main-divider {
-    width: 400px;
+    width: 700px;
   }
 }
