--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -14,6 +14,11 @@
   margin: 20px;
 }
 
+.Main-tableContainer {
+  max-height: 500px;
+  overflow-y: scroll;
+}
+
 table.Main-table {
   border-collapse: collapse;
   box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.03);
