--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,11 @@
   justify-content: center;
   margin: 20px;
 }
+
+.App-filters {
+  margin: 20px 0;
+}
+
+.App-filters label {
+  margin-right: 10px
+}
