--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -7,6 +7,10 @@
   .Main-charts {
     flex-direction: row;
   }
+
+  .Main-tableContainer {
+    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.03);
+  }
 }
 
 .Main-prediction {
@@ -21,7 +25,6 @@
 
 table.Main-table {
   border-collapse: collapse;
-  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.03);
   font-size: 12px;
   width: 100%;
 }
