--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
+  padding: 0 5px;
   min-height: 100vh;
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,8 +12,9 @@
 }
 
 .App h1 {
+  text-align: center;
   font-weight: lighter;
-  margin: 40px 0;
+  margin: 40px 20px;
 }
 
 .App-select-button {
